--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,11 @@
   "singleQuote": true,
   "printWidth": 100,
   "tabWidth": 2,
+  "bracketSpacing": true,
+  "endOfLine": "auto",
+  "jsxSingleQuote": true,
   "trailingComma": "es5",
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "proseWrap": "preserve",
+  "htmlWhitespaceSensitivity": "css"
 }
