--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.7.0",
     "redux-saga": "^1.3.0",
     "sass": "^1.89.2"
   },
