--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,6 @@
     "emitDeclarationOnly": true
   },
 
-  "include": ["src"],
+  "include": ["src", "vite.config.ts"],
   "exclude": ["node_modules", "dist"]
 }
