--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
     "redux-saga": "^1.3.0",
-    "sass": "^1.89.2"
+    "sass": "^1.89.2",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
