--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^7.7.0",
     "redux-saga": "^1.3.0",
     "sass": "^1.89.2",
+    "swiper": "^11.2.10",
     "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
